--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">Indian News</string>
+    <string name="app_name">Top Headlines</string>
 
     <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
     <string name="no_internet_connection">No internet connection.</string>
@@ -8,5 +8,19 @@
     <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
     <string name="no_news">No news found.</string>
 
+    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
+    <string name="settings_menu_item">Settings</string>
+
+    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
+    <string name="settings_title">News Settings</string>
+
+
+    <string name="settings_country">Country</string>
+
+    <string name="settings_country_hint">Pick your country</string>
+
+    <string name="settings_country_key" translatable="false">country_key</string>
+
+    <string name="settings_default_country" translatable="false">in</string>
 
 </resources>
